# MCP-Contable

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
connectors/: .env.example  pyproject.toml
connectors/src/mcp_contable/arca/: server.py
connectors/src/mcp_contable/boletin_nacional/: server.py
connectors/src/mcp_contable/ckan_juridico/: server.py
connectors/src/mcp_contable/common/: __init__.py
connectors/src/mcp_contable/infoleg/: server.py
connectors/src/mcp_contable/santafe_sin/: __init__.py
connectors/tests/: test_arca.py  test_boletin_nacional.py  test_cache.py  test_ckan_juridico.py  test_ckan_nacional.py  test_http.py  test_santafe_sin.py
docs/: ARCHITECTURE.md  GROUNDING.md  SESSION_LOG.md  SOURCES.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/connectors/: .env.example  CLAUDE.md
plugin/docs/: ARCHITECTURE.md  COWORK.md  DEVELOPING-SKILLS.md  SECURITY.md  SESSION_LOG.md  SOURCES.md
plugin/managed-agents/: README.md
plugin/recursos/: calendario-vencimientos-arca.md  mapa-rt-facpce.md  monotributo.md
plugins/estudio-contable/: .mcp.json  CLAUDE.md  README.md
plugins/impuestos-liquidaciones/: CLAUDE.md  README.md
plugins/registracion-estados-contables/: .mcp.json  CLAUDE.md  README.md
plugins/societario-cumplimiento/: CLAUDE.md  README.md
plugins/sueldos/: CLAUDE.md  README.md
recursos/: README.md
skills/cold-start-interview/: SKILL.md
skills/consulta-cumplimiento/: SKILL.md
(+60 files in other folders)
